Bug 689369 - PDF run at 600 dpi resolution produces a white horizontal bar across image
Summary: PDF run at 600 dpi resolution produces a white horizontal bar across image
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: master
Hardware: Macintosh MacOS X
: P2 normal
Assignee: Marcos H. Woehrmann
URL:
Keywords: bountiable
Depends on:
Blocks:
 
Reported: 2007-07-26 09:25 UTC by Timothy Osborn
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer: 850
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Osborn 2007-07-26 09:25:16 UTC
The customer reports and I've verified that that attached PDF file,
scp_11802.pdf, produces a white horizontal bar across the image. The job runs OK
at 300dpi but varying resolution slightly around the 600 dpi mark changes the
width and number of white bars.

The command line I used for testing is:

./debugobj/gs -q -sDEVICE=ppmraw -r600 -sOutputFile=test.ppm scp_11802.pdf

It may be transparency related as I also ran the job with -dNOTRANSPARENCY and
found that the white bar did not appear.
Comment 1 Timothy Osborn 2007-07-26 09:30:23 UTC
Created attachment 3220 [details]
scp_11802.pdf

scp_11802.pdf
Comment 2 Henry Stiles 2007-07-31 14:10:34 UTC
requesting a simplified test and historical version check.  Marcos usually does
a version history check.
Comment 3 Timothy Osborn 2007-08-06 20:26:03 UTC
Here is the requested history.

The summary is this... I could not find a release of the software where the job
ran correctly. It went from a total failure at r7022 to the bad output at r7023.
Since I can't identify the revision where the problem first appeared, I can't
zero in on the change that caused the problem. Therefore I can't produce a
simplified version of the file.


8.53 (KERN_INVALID_ADDRESS)

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_INVALID_ADDRESS at address: 0xff642e2e
0xffff8928 in ___memcpy () at
/System/Library/Frameworks/System.framework/PrivateHeaders/ppc/cpu_capabilities.h:189
189    
/System/Library/Frameworks/System.framework/PrivateHeaders/ppc/cpu_capabilities.h:
No such file or directory.
        in
/System/Library/Frameworks/System.framework/PrivateHeaders/ppc/cpu_capabilities.h

============================================
8.54/6732 (/rangecheck in --.discardtransparencygroup--)

./bin/gs -q -sDEVICE=ppmraw -r600 -sOutputFile=test.ppm
/Volumes/WD160/Artifex/Artifex-BUGS/689369/scp_11802.pdf

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased {16 0
resolveR}] ****
Error: /rangecheck in --.discardtransparencygroup--
Operand stack:
   --dict:11/11(L)--   1
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--  
--nostringval--   2   %stopped_push   --nostringval--   --nostringval--  
--nostringval--   false   1   %stopped_push   1   3   %oparray_pop   1   3  
%oparray_pop   1   3   %oparray_pop   --nostringval--   --nostringval--   2   1
  1   --nostringval--   %for_pos_int_continue   --nostringval--  
--nostringval--   false   1   %stopped_push   --nostringval--   --nostringval--
Dictionary stack:
   --dict:1123/1686(ro)(G)--   --dict:2/20(G)--   --dict:75/200(L)--  
--dict:75/200(L)--   --dict:105/127(ro)(G)--   --dict:260/347(ro)(G)--  
--dict:21/24(L)--   --dict:4/6(L)--   --dict:21/32(L)--   --dict:3/5(L)--
Current allocation mode is local
Last OS error: 2
============================================
6864 (/rangecheck in --.discardtransparencygroup--)

Same as 8.54/6732.

============================================
6996 (bus error)

./bin/gs -q -sDEVICE=ppmraw -r600 -sOutputFile=test.ppm
/Volumes/WD160/Artifex/Artifex-BUGS/689369/scp_11802.pdf

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased {16 0
resolveR}] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****
Bus error
============================================
7015 (Segmentation fault)

/bin/gs -q -sDEVICE=ppmraw -r600 -sOutputFile=test.ppm
/Volumes/WD160/Artifex/Artifex-BUGS/689369/scp_11802.pdf

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased {16 0
resolveR}] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****
Segmentation fault
============================================
7020 (Segmentation fault)

same behavior as 7015

============================================
7022 (Segmentation fault)

same behavior as 7015

============================================
7023 (problem is present in output)

same behavior as 8.60.

============================================
7024 (problem is present in output)

same behavior as 8.60.
============================================
7033 (problem is present in output)

same behavior as 8.60.
============================================
7062 (Build problem)

OS X Build problem, fixed in 7070 (see bug report #688394)
============================================
7070 (problem is present in output)

same behavior as 8.60.
============================================
7128 (problem is present in output)

same behavior as 8.60.
============================================
7259 (problem is present in output)

same behavior as 8.60.
============================================
8.56/7785 (problem is present in output)

same behavior as 8.60.
============================================
8.60 (problem is present in output)

./bin/gs -q -sDEVICE=ppmraw -r600 -sOutputFile=test.ppm
/Volumes/WD160/Artifex/Artifex-BUGS/689369/scp_11802.pdf

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased {16 0
resolveR}] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****

   **** Warning: CS/cs (setcolorspace) operand not a name: [/ICCBased -dict-] ****
>>showpage, press <return> to continue<<


   **** This file had errors that were repaired or ignored.
   **** The file was produced by: 
   **** >>>> Adobe PDF Library 6.0 <<<<
   **** Please notify the author of the software that produced this
   **** file that it does not conform to Adobe's published PDF
   **** specification.
Comment 4 Henry Stiles 2007-10-16 14:24:35 UTC
The attachment is damaged.
Comment 5 Ray Johnston 2007-10-16 14:57:14 UTC
I just downloaded this and it looks OK and is identical to the one sent to
support on July 25th.

Perhaps you 'saved' it when you weren't logged in, which gives you a small
HTML file which says:

Error  
    Access to this attachment is restricted.  
Please press Back and try again. 

The file should be 8,547,960 bytes.
Comment 6 Henry Stiles 2008-01-02 20:07:26 UTC
works for me in head (rev 8475).  Reassigning to Marcos for testing and customer
notification.
Comment 7 Marcos H. Woehrmann 2008-01-07 16:18:34 UTC
My results match Henry's: with r8164 there is white horizontal stripe and with r8477 the output is correct.   
I'll find the applicable change and send a patch to the customer.
Comment 8 Marcos H. Woehrmann 2008-01-07 21:45:17 UTC
The r8170 revision is the first one that works.  I'll contact the customer with
a  patch.