Fix for Seg fault caused by wrap around of an unsigned long. Seen at 600 dpi to pkmraw with Bug689369.pdf and -dBufferSpace=32000000.

DETAILS:

While the pdf14_trans_buffer_size was small enough, the mem_space calculation
would wrap around.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8853 a1074d23-0009-0410-80fe-cf8c14f379e6