gs/src/gdevprn.c
@@ -278,9 +278,9 @@ gdev_prn_allocate(gx_device *pdev, gdev_prn_space_params *new_space_params,
 	size_ok = ppdev->printer_procs.buf_procs.size_buf_device
 	    (&buf_space, pdev, NULL, pdev->height, false) >= 0;
 	if (ppdev->page_uses_transparency) {
-	    if (new_height < max_ulong/(ESTIMATED_PDF14_ROW_SPACE(max(1, new_width)) >> 3))
-		pdf14_trans_buffer_size = new_height
-		    * (ESTIMATED_PDF14_ROW_SPACE(new_width) >> 3);
+	    pdf14_trans_buffer_size = (ESTIMATED_PDF14_ROW_SPACE(max(1, new_width)) >> 3);
+	    if (new_height < max_ulong/(mem_space + (new_height * pdf14_trans_buffer_size)))
+		pdf14_trans_buffer_size *= new_height;
 	    else {
 		size_ok = 0;
 		pdf14_trans_buffer_size = 0;
